--- a/styles.css
+++ b/styles.css
@@ -15,4 +15,21 @@ navbar {
     .navbar-brand:hover, .navbar-brand:active {
         img {filter: drop-shadow(0 0 5px 10px) !important;}
     }
+    .btn-nav {
+        margin: 1% 2%;
+        padding: .1%;
+        width: 5%;
+        background-color: #018249;
+        color: white;
+        transition: .25s;
+        svg {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    .btn-nav:hover {
+        background-color: white;
+        border: 5px solid #018249;
+        color: #018249;
+    }
 }
