--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-navbar {
+nav {
     width: 100%;
     box-shadow: 0 0 10px 10px rgba(0,0,0,.25);
     *{margin: 1%}
