--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    font-family: "Raleway",sans-serif;
+}
 nav {
     width: 100%;
     box-shadow: 0 0 10px 10px rgba(0,0,0,.25);
