--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ nav {
     }
 }
 #intro {
+    box-shadow: inset 0 0 0 100vh rgba(255,255,255,.6);
     margin-bottom: 0;
     h1 {padding: 5%;}
 }
