--- a/styles.css
+++ b/styles.css
@@ -8,24 +8,23 @@ body {
 }
 nav {
     width: 100%;
-    box-shadow: 0 0 10px 10px rgba(0,0,0,.25);
+    padding-left: 5% !important;
+    padding-right: 5% !important;
     *{margin: 1%}
     .navbar-brand {
-        width: 15%;
+        width: 20%;
         transition: .25s !important;
         img {
             width: 100%;
             object-fit: contain;
+            transition: .25s !important;
         }
-    }
-    .navbar-brand:hover, .navbar-brand:active {
-        img {filter: drop-shadow(0 0 5px 10px) !important;}
     }
     .btn-nav {
         margin: .5% 2%;
         padding: .1%;
         width: 5%;
-        background-color: #018249;
+        background-color: #007a33;
         color: white;
         transition: .25s;
         svg {
@@ -35,12 +34,44 @@ nav {
     }
     .btn-nav:hover {
         background-color: white;
-        border: 5px solid #018249;
-        color: #018249;
+        border: 5px solid #007a33;
+        color: #007a33;
     }
 }
-#intro {
+.full {
+    height: 100%; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;   
     box-shadow: inset 0 0 0 100vh rgba(255,255,255,.6);
     margin-bottom: 0;
-    h1 {padding: 5%;}
+    h1 {
+        padding: 2.5% 2.5% 5%;
+        font-weight: bold;
+        color: #007a33;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    nav {
+        padding-top: 17.5%;
+    }
+    .navbar-brand {width: 30% !important;}
+    .btn-nav {width: 10% !important;}
+}
+
+@media screen and (max-width: 720px) {
+    nav {
+        padding-top: 22.5%;
+        background-image: none;
+        box-shadow: none;
+    }
+    .navbar-brand {
+        margin: 5% !important;
+        width: 50% !important;
+    }
+    .btn-nav {
+        margin: 5% !important;
+    }
 }
