--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,15 @@
 }
 body {
     font-family: "Raleway",sans-serif;
+    font-size: 14px;
+}
+h1 {
+    font-family: 'DellaRobbia BT Bold','Times New Roman', Times, serif;
+    font-weight: 400 !important;
+    padding: 2.5%;
+    padding-top: 2%;
+    color: #f2a900;
+    font-weight: 400;
 }
 nav {
     width: 100%;
@@ -52,15 +61,13 @@ nav {
     background-size: cover;   
     box-shadow: inset 0 0 0 100vh rgba(255,255,255,.75);
     margin-bottom: 0;
-    h1 {
-        font-family: 'DellaRobbia BT Bold','Times New Roman', Times, serif;
-        font-weight: 400 !important;
-        padding: 2.5%;
-        padding-top: 1.25%;
-        font-weight: bold;
-        color: #007a33;
+    h1 {color: #007a33;}
+    h4 {
+        padding-bottom: 2.5%;
     }
-    h4 {padding-bottom: 2.5%;}
+}
+#branch {
+    margin-bottom: 2.5%;
 }
 
 @media screen and (max-width: 960px) {
