--- a/styles.css
+++ b/styles.css
@@ -21,15 +21,22 @@ h1 {
     color: #f2a900;
     font-weight: 400;
 }
+
+p {
+    font-size: 20px;
+}
+
 nav {
     width: 100%;
+    background-color: white;
     padding-left: 5% !important;
     padding-right: 5% !important;
+    box-shadow: 7px 7px 5px rgba(0,0,0,.25);
     *{margin: 1%}
     .navbar-brand {
         width: 20%;
         transition: .25s !important;
-        img {
+        img {           
             width: 100%;
             object-fit: contain;
             transition: .25s !important;
@@ -53,8 +60,9 @@ nav {
         color: #007a33;
     }
 }
-.full {
+.full{
     height: 100%; 
+    background-image: url('feu main.png');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -68,6 +76,20 @@ nav {
 }
 #branch {
     margin-bottom: 2.5%;
+}
+
+h5 { color: #007a33;
+     font-family: 'DellaRobbia BT Bold','Times New Roman', Times, serif;
+     font-weight: 400 !important;
+}
+
+.card {
+    height: 100% !important;
+    align-items: center !important;
+}
+.card-text {
+    height: min-content !important;
+    margin: auto !important;
 }
 
 @media screen and (max-width: 960px) {
